--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ rusqlite = { version = "0.36.0", features = ["bundled"] }
 rand = "0.9.1"
 chrono = "0.4.41"
 dirs = "6.0.0"
+
+[dev-dependencies]
+tempfile = "3.10"
