--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ rusqlite = { version = "0.36.0", features = ["bundled"] }
 rand = "0.9.1"
 chrono = "0.4.41"
 dirs = "6.0.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 [dev-dependencies]
 tempfile = "3.10"
